Fix misaligned button images on some devices

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -66,6 +66,7 @@
   border: none;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   pointer-events: auto;
+  padding: 0;
 
   &:hover {
     filter: brightness(0.95);
